2008-08-11  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinypad.el (ti::macrof-minor-mode-wizard): Replace
	`find-file-hooks' with (ti::compath-find-file-hook).

	* tiny/tinygnus.el (tinygnus-uff-summary-date): Use
	`string-to-number'.
	(autoload time-stamp-string): new.
	(tinygnus-set-group): Update to modern backquote.
	(tinygnus-summary-map-articles-macro): Update to modern backquote.
	(tinygnus-summary-map-article-body-macro): Update to modern backquote.
	(tinygnus-output-buffer-macro): Update to modern backquote.
	(tinygnus-files-from-dir-macro): Update to modern backquote.
	(tinygnus-summary-map-line-macro): Update to modern backquote.
	(tinygnus-debug-gnus-macro): Update to modern backquote.

	* tiny/tinydired.el (autoload dired-read-shell-command): New.

	* tiny/tinylisp.el (tinylisp-read-word): Correct args to
	in call `ti::buffer-match'.
	(tinylisp-occur-select-forward): Use `string-to-number'.
	(tinylisp-elp-results): Use `insert-buffer-substring'.
	(tinylisp-require): Update to modern backquote.
	(tinylisp-with-current-buffer): Update to modern backquote.
	(tinylisp-symbol-do-macro): Update to modern backquote.
	(tinylisp-record-macro): Update to modern backquote.
	(tinylisp-defun-macro): Update to modern backquote.
	(tinylisp-defun-sym-macro): Update to modern backquote.
	(tinylisp-defcustom-macro): Update to modern backquote.
	(defadvice defconst): Update to modern backquote.
	(top level; near tinylisp-b-record): Update to modern backquote.
	(top level; near elp results): Update to modern backquote.
	(tinylisp-library-documentation): Use `insert-buffer-substring'.
	(tinylisp-defmacro-surround-word): REMOVED. Obsolete.
	(tinylisp-eval): Replace call to `replace-string'
	(tinylisp-lisp-mnt-tag-check-and-fix-file): Remove `find-file-hooks'.
	(tinylisp-syntax-show-mode): Replace `make-local-hook'.
	(tinylisp-property-show-mode): Replace `make-local-hook'.

	* tiny/tinypage.el (tinypage-renumber-level-forward): Change to
	`string-to-number'.
